--- a/src/main/resources/com/wilburcoding/minesweeper/main-view.fxml
+++ b/src/main/resources/com/wilburcoding/minesweeper/main-view.fxml
@@ -1,21 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.HBox?>
-<VBox alignment="CENTER" prefHeight="700.0" prefWidth="500.0" style="-fx-border-color: black" xmlns:fx="http://javafx.com/fxml"
-      fx:controller="com.wilburcoding.minesweeper.MinesweeperController">
+<VBox alignment="CENTER" prefHeight="550.0" prefWidth="500.0" style="-fx-border-color: black" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wilburcoding.minesweeper.MinesweeperController">
 
 
 
-    <HBox alignment="TOP_CENTER" prefHeight="100.0" prefWidth="500.0" >
-        <Label fx:id="welcomeText"/>
-        <Button text="Hello!" onAction="#onHelloButtonClick"/>
+    <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="500.0">
+        <HBox alignment="CENTER_LEFT" prefHeight="50.0" prefWidth="250.0">
+            <Label fx:id="mainText" style="-fx-font-size: 20;" text="Minesweeper" />
+
+        </HBox>
+      <ComboBox id="difficulty" prefWidth="150.0" promptText="Difficulty ">
+         <HBox.margin>
+            <Insets right="5.0" />
+         </HBox.margin>
+      </ComboBox>
+        <Button onAction="#onHelloButtonClick" text="Start" />
+
     </HBox>
-    <VBox style="-fx-background-color: black" prefHeight="500.0" prefWidth="500.0">
+    <VBox prefHeight="500.0" prefWidth="500.0" style="-fx-background-color: black">
 
     </VBox>
 </VBox>
