Fix parameterization issues with the code (thanks Intellij) and start actual game UI

--- a/src/main/resources/com/wilburcoding/minesweeper/main-view.fxml
+++ b/src/main/resources/com/wilburcoding/minesweeper/main-view.fxml
@@ -21,7 +21,9 @@
         <Button onAction="#onHelloButtonClick" text="Start" />
 
     </HBox>
-    <VBox prefHeight="500.0" prefWidth="500.0" style="-fx-background-color: black">
+    <VBox prefHeight="500.0" prefWidth="500.0" fx:id="mainGame">
+        <HBox alignment="CENTER_LEFT" prefHeight="20.0" prefWidth="500.0">
 
+        </HBox>
     </VBox>
 </VBox>
