--- a/src/main/resources/com/wilburcoding/minesweeper/main-view.fxml
+++ b/src/main/resources/com/wilburcoding/minesweeper/main-view.fxml
@@ -18,7 +18,7 @@
             <Insets right="5.0" />
          </HBox.margin>
       </ComboBox>
-        <Button onAction="#onHelloButtonClick" text="Start" />
+        <Button onAction="#startButtonClick" text="Start" />
 
     </HBox>
     <VBox prefHeight="500.0" prefWidth="500.0" fx:id="mainGame">
