Add more info text functionality + fix some more bugs

--- a/src/main/resources/com/wilburcoding/minesweeper/main-view.fxml
+++ b/src/main/resources/com/wilburcoding/minesweeper/main-view.fxml
@@ -16,7 +16,7 @@
                         <Insets left="20.0"/>
                     </VBox.margin>
                 </Label>
-                <Label fx:id="infoText" style="-fx-font-size: 15" text="Loading...">
+                <Label id="infoText" style="-fx-font-size: 15" text="">
                     <VBox.margin>
                         <Insets left="20.0"/>
                     </VBox.margin>
