--- a/src/main/resources/com/wilburcoding/minesweeper/main-view.fxml
+++ b/src/main/resources/com/wilburcoding/minesweeper/main-view.fxml
@@ -4,8 +4,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox alignment="TOP_CENTER" style="-fx-border-color: black" xmlns="http://javafx.com/javafx/17.0.2-ea"
-      xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wilburcoding.minesweeper.MinesweeperController">
+<VBox alignment="TOP_CENTER" style="-fx-border-color: black" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.wilburcoding.minesweeper.MinesweeperController">
 
 
     <HBox alignment="CENTER_LEFT" minHeight="60.0" prefWidth="500.0">
@@ -13,12 +12,12 @@
             <VBox alignment="CENTER_LEFT">
                 <Label fx:id="mainText" style="-fx-font-size: 20;" text="Minesweeper">
                     <VBox.margin>
-                        <Insets left="20.0"/>
+                        <Insets left="20.0" />
                     </VBox.margin>
                 </Label>
-                <Label id="infoText" style="-fx-font-size: 15" text="">
+                <Label id="infoText" style="-fx-font-size: 15;" text="">
                     <VBox.margin>
-                        <Insets left="20.0"/>
+                        <Insets left="20.0" />
                     </VBox.margin>
                 </Label>
             </VBox>
@@ -26,15 +25,15 @@
         </HBox>
         <ComboBox id="difficulty" prefWidth="150.0" promptText="Difficulty ">
             <HBox.margin>
-                <Insets right="5.0"/>
+                <Insets right="5.0" />
             </HBox.margin>
         </ComboBox>
-        <Button fx:id="startButton" text="Start"/>
+        <Button fx:id="startButton" text="Start" />
 
     </HBox>
     <VBox maxWidth="500.0" style="-fx-border-color: black">
         <VBox.margin>
-            <Insets bottom="10.0"/>
+            <Insets bottom="10.0" />
         </VBox.margin>
     </VBox>
     <VBox fx:id="mainGame" alignment="BOTTOM_CENTER" maxWidth="500.0">
