--- a/src/main/resources/com/wilburcoding/minesweeper/main-view.fxml
+++ b/src/main/resources/com/wilburcoding/minesweeper/main-view.fxml
@@ -15,7 +15,7 @@
                         <Insets left="20.0" />
                     </VBox.margin>
                 </Label>
-                <Label id="infoText" style="-fx-font-size: 15;" text="">
+                <Label id="infoText" style="-fx-font-size: 15;">
                     <VBox.margin>
                         <Insets left="20.0" />
                     </VBox.margin>
